--- a/styles.css
+++ b/styles.css
@@ -80,3 +80,12 @@ body{
   grid-row: 2;
   padding: 2px 0 0 20px;
 }
+
+#infobar{
+  height: 50px;
+  width: 100%;
+  background-color: var(--prim-color);
+  position: fixed;
+  top: 100px;
+  text-align: center;
+}
