index.html should be finished checkout also should be complete
confirm page still not finished, will clear cart, and print
receipt. will push to localstorage under receipts as JSON

--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
   --prim-color: #E2A9F1;    /* ptimary purple, shouldnt change. */
   --sec-color: #FFDE59;     /* secondary yellow, used for buttons and clickable text, shouldnt change */
   --text-color: #000000;    /* used for default text, which should always be on top of foreground, never background directly */
+  --tg-color: #919191;      /* used in checkout(payment) and cart pages */
 }
 
 @font-face{
