added shop_user and shop_admin
by riri

modified shops to work with main data stores, made togglesidebar
function into its own file

by esncu

shop_admin edit function breaks product page but appears fine in shop
pages?

also need to unify divya's sidebar toggle

--- a/styles.css
+++ b/styles.css
@@ -90,3 +90,19 @@ body{
   top: 100px;
   text-align: center;
 }
+
+#topar-btn{
+height: 52px;
+width: 52px;
+margin: 0;
+padding: 0;
+}
+#topbar-btn img{
+height: 52px;
+width: 52px;
+margin: 0;
+padding: 0;
+}
+.hidden {
+  display: none;
+}
